censor non-compliant messages